deployment.yaml
# create a k8s namespace named network
apiVersion: v1
kind: Namespace
metadata:
  name: network
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network
  labels:
    app: network
  namespace: network
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: network
  template:
    metadata:
      labels:
        app: network
    spec:
      containers:
      - name: network
        image: christianschwartz/network:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: network
  namespace: network
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: network
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ports.cloud-formation.cschwartz.net
      secretName: network-tls
  rules:
    - host: "ports.cloud-formation.cschwartz.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: network
                port:
                  number: 80
